client/src/App.css
* {
    font-family: 'Roboto', sans-serif;
    margin: 0px;
    padding: 0px;
    color: #ededed;
}

body {
    overflow-y: scroll;
}
#home-container,
#gamecontainer,
#level-overview-container,
#board-container,
#progress-container,
#win-container,
#description-container,
#gamecontainerlvl5, #about-us-container, #help-container, #policy-container {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 95vh;

    display: grid;
    justify-items: center;
    align-items: center;
}

.box{
    background-repeat: no-repeat;
    background-size: cover;
}

button,#pdfdownload{
    border:0;
    color: #000000;
    background-color: #6dffdd;
    background-image: none;
    background-repeat: no-repeat;
    background-position: center;
    font-size: clamp(0.1rem,2vw,2rem);
    text-decoration: none;
    margin: 0.5vw;
    text-decoration: none;
    border-radius: 0.2vw;
    padding: 0.1vw;
}
button:hover, #pdfdownload:hover{
    color: #0b2037;
    background-color: #ededed;
}

/* Nav */
#navmain,
#gameNavbar{
    background-size: cover;
    background-position: center;
    display: flex;
    align-items: center;

    border: 0px;
    border-bottom: 0.15rem;
    border-style: solid;
    border-color: #ffffff;
}

#navmain {
    justify-content: space-between;
    /* background-color: #0e2a47; */
    background-image: url("./images/background.png");
}

nav .navlinks {
    display: flex;
    justify-content: space-between;
    padding-right: 0.7vw;
    margin-top: 1vh;
    margin-bottom: 1vh;
}

nav a {
    text-decoration: none;
    color: #ededed;
    text-transform: uppercase;
    text-align: center;
    vertical-align: middle;
    font-size: clamp(0.5rem,2.5rem,4vw);
    margin-left: 1vw;
}

.logo {
    display: flex;
    justify-items: center;
    align-items: center;
    padding-left: 0.1rem;
}

.logo img {
    width: 3rem;
    height: 3rem;
}

.active {
    color: #48ffd5;
}

nav a:hover {
    color: #48ffd5;
    background-color: #ededed13;
    border-radius: 5px;
}

/* Home */
#home-container{
    background-image: url("./images/factory2.1.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    display: flex;
    align-items: flex-start;
    justify-content: center;
}
#home-container #loginbutton, #logoutbutton{
    font-size: clamp(0.1rem,1.3rem,1.03vw);
}
#blog {
    /* background-color: #00000091; */
    display: grid;
    grid-template-columns: 32vw 32vw 32vw;
    grid-template-rows: 50vh 22vh 20vh;
    grid-template-areas: 
    "one one two"
    "three three three"
    "four four four";
    height: 91vh;
}

#home-info {
    grid-area: one;
    display: grid;
    align-content: center;
    font-size: clamp(0.1rem,2vw,2rem);
    padding: 1rem;
}

#home-info h1,
#home-info p
{
    color: #ededed;
}

#accountgrid{
    padding: 1vh;
    grid-area: two; 
    display: flex;
    justify-content: right;
}
#account{
    background-color: #edededbc;
    height: min-content;
    width: 20rem;
}
#login-message p,label{
    color: #000000;
}
label {
    text-align: left;
}
input {
    float: left;
    color: #000000;
    background-color: #ededed;
    border-color: #48ffd5;
    border-style: solid;
    border-radius: 15px;
    border-width: 1px;
    height: 1.5vh;
    margin: 0.5rem;
    font-size: clamp(0.1rem,1.3rem,1.03vw);
    padding: 4px;
}
#user-login,
#login-message{
    font-size: clamp(0.1rem,2vw,2rem);
    display: grid;
    align-items: center;
}
#play{
    grid-area: four;
    display: flex;
    justify-content: center;
    align-items: center;
}
#playbutton{
    background-image: url(images/background.png);
    text-transform: uppercase;
    background-size: cover;
    color: #48ffd5;
    padding: 1vw;
    font-size: clamp(0.1rem,2vw,2rem);
    border-radius: 5rem;
    border: 0.1rem;
    border-width: thin;
    border-style: solid;
}

#playbutton:hover{
    background-image: none;
    color: #000000;
    background-color: #f2f2f2;
}
#gamecontainer button:hover,
.levelOverview-button:hover,
#gamecontainerlvl5 button:hover {
    background-image: none;
    color: #0e2a47;
    background-color: #48ffd5;
}

#account p {
    margin: 0.5vw;
    color: black;
    font-size: clamp(0.1rem,1.3rem,1.03vw);
}

#how-to-play-grid {
    grid-area: three;
    padding: 2vw;
}
#how-to-play{
    background-color: #edededcd;
    border-radius: 2px;
    padding: 0.25vw;
}

#how-to-play p,
#how-to-play h3 {
    font-size: clamp(0.1rem,1.3rem,1.03vw);
    color: #000000;
}

/* Game-nav*/
#gameNavbar {
    justify-content: space-between;
    background-image: url(images/background2.jpg);
}

.navgamecontent {
    width: 20vw;
    color: #000000;
    font-size: 2vmax;
    text-transform: uppercase;
    text-align: left;
    vertical-align: middle;
    display: flex;
    justify-content: space-around;
    flex-wrap: nowrap;
    padding-left: .25vw;
    padding-right: .25vw;
}
.navgamecontent p, .navgamecontent span{
    font-size: clamp(0.5rem,2.5rem,4vw);
    margin-top: 1vh;
    margin-bottom: 1vh;
}
#navlevelround {
    width: auto;
    justify-content: left;
}

.navgamecontent p {
    /* margin-right: 2vmax; */
    color: #0b2037;
}

#score {
    justify-content: right;
    width: auto;
}

.gameNavbar-blue {
    color: #1c62ad;
}

/* Gamecontainer */
#gamecontainer {
    background-image: url(images/serverroom.jpg);
    background-position: center, center;
    background-size: cover;
    align-items: ;
}

#gamecontainerlvl5 {
    position: absolute;
    top: 7vh;
}

#backgroundlvl5 {
    filter: blur(3px);
    display: block;
    width: 99vw;
    height: 95vh;
    object-fit: cover;
    
}
/* ... */

